shipping-api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: shipping
  labels:
    app: shipping
    version: v1
spec:
  ports:
  - port: 8080
    name: http
  selector:
    app: shipping
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: shipping
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: shipping
        version: v1
    spec:
      containers:
        - name: shipping
          image: gcr.io/nandanks-151422/shipping:latest
          imagePullPolicy: Always
          ports:
          - containerPort: 8080
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: shipping-dest-rule
  namespace: default
spec:
  host: shipping
  trafficPolicy:
          #tls:
          # mode: ISTIO_MUTUAL
    loadBalancer:
      simple: LEAST_CONN
  subsets:
  - labels:
      app: shipping
    name: v1
